<resources>
    <string name="app_name">天天好天气</string>
    <string name="privacy_dialog_content">感谢您选择、使用天天好天气！为了给您提供更优质的天气服务，天天好天气将使用您的个人信息。请在使用前查看并同意《隐私政策》及《用户协议》，若不同意将无法使用我们的产品及服务.
            \n\n此外，在首次安装天天好天气APP时，我们会询问您是否授权以下权限：\n
             1、通知\n
            方便及时准确提供早晚天气和预警信息\n
            2、定位\n
            用于提供精准的位置天气服务和短时预报\n\n
            您还可以选择在系统设置功能中选择打开或关闭
            对应权限。</string>
    <string name="privacy_dialog_title">天天好天气使用隐私政策说明</string>
    <string name="agree_privacy">同意并进入</string>

    <string name="charging_screen_fully_charged_notification">已完成充电</string>
    <string name="no_network_now">当前无网络，请连接后重试</string>
    <string name="comment_count">%d评论</string>
    <string name="loading_more">正在努力为您加载…</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="today_hot">今日热点</string>
    <string name="before_minutes">%d分钟前</string>
    <string name="before_hour">%d小时前</string>
    <string name="check_more">查看更多</string>
    <string name="sticky_new">置顶</string>

    <string name="set">SET</string>
    <string name="charging_screen_close_dialog_title_lock">你要关闭智能屏保吗？</string>
    <string name="charging_screen_close_dialog_content_lock">如果你关闭智能屏保，你将无法使用锁屏保护，是否确认关闭</string>

    <string name="charging_screen_right_unlock_describe">右滑解锁</string>
    <string name="charging_screen_charged_left_describe2">充满还需：%s</string>
    <!--Dialog-->
    <string name="charging_screen_close_dialog_title">确定关闭锁屏新闻？</string>
    <string name="charging_screen_close_dialog_content">关闭后将无法获取最新实时热点新闻，是否确认关闭?</string>

    <string name="charging_screen_close_dialog_negative_action">关闭</string>
    <string name="charging_screen_close_dialog_positive_action">取消</string>

    <string name="screen_saver_close_dialog_title">你要关闭智能屏保吗？</string>
    <string name="screen_saver_close_dialog_content">如果你关闭智能屏保，你将不能实时检测手机状态，是否确认关闭？</string>
    <!-- Smart Lock Screen -->
    <string name="smart_lock_memory">内存使用</string>
    <string name="smart_lock_storage">存储空间</string>
    <string name="smart_lock_cpu">CPU温度</string>
    <string name="smart_lock_battery">电量信息</string>

    <string name="recent_app_name">轻读书</string>

    <!-- AirFragment -->
    <string name="air_update_time">发布时间：%s</string>

    <!-- IndexAdapter -->
    <string name="index_tv_time">%1$s%2$s</string>
    <string name="index_tv_temp">%s℃</string>
    <string name="index_tv_wind_deg">%s°</string>
    <string name="index_tv_wind_sc">%s级</string>
    <string name="index_tv_wind_spd">%s公里/小时</string>
    <string name="index_tv_pres">%shPa"</string>
    <string name="index_tv_dew">%s℃</string>
    <string name="index_tv_hum">%s%</string>

    <string name="photo_have_saved">图片已保存</string>
    <string name="puzzle">拼图</string>
    <string name="photo_done">完成</string>
    <string name="photo_save">保存</string>
    <string name="go_to_share">去分享</string>
    <string name="tv_edit_digout_font_size">大小</string>
    <string name="tv_edit_digout_digouteditz_font">抠图编辑</string>
    <string name="puzzle_back">返回</string>


    <string name="share_to">分享到</string>

    <string name="share_empty_tip">分享內容不能为空</string>
    <string name="share_channel_none">没有该分享渠道</string>

    <!--微信-->
    <string name="share_no_weixin_client">分享失败，请先安装微信</string>

    <!--分享结果-->
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">分享取消</string>

    <string name="share_weibosdk_auth_success">授权成功</string>
    <string name="share_weibosdk_auth_failed">授权失败</string>
    <string name="share_weibosdk_auth_canceled">取消授权</string>
    <string name="share_no_weibo_client">分享失败，请先安装微博客户端</string>


    <!-- share channel -->
    <string name="share_channel_weixin_friend">微信</string>
    <string name="share_channel_weixin_circle">朋友圈</string>
    <string name="share_channel_weibo">微博</string>
    <string name="share_channel_qq">QQ</string>
    <string name="share_channel_qzone">QQ空间</string>
    <string name="share_channel_more">更多</string>

    <!-- saveBitmap -->
    <string name="share_save_bitmap_failed">图片保存失败</string>
    <string name="share_save_bitmap_no_sdcard">SD卡未挂载</string>
</resources>