<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_20_transparent"
    android:gravity="center">
   <androidx.cardview.widget.CardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/white"
        tools:ignore="SpUsage"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#222222"
        android:layout_marginTop="40dp"
        android:text="@string/privacy_dialog_title"
        style="@style/textstyle"
        />

    <TextView
        android:id="@+id/privacy_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:lineSpacingExtra="5sp"
        tools:text="@string/privacy_dialog_content"
        android:layout_marginTop="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="#626263"
        android:textSize="12sp"
        android:textStyle="bold"
        />

        <Button
            android:id="@+id/agree_privacy"
            android:layout_width="210dp"
            android:layout_height="38dp"
            android:text="@string/agree_privacy"
            android:textColor="@color/white_primary"
            android:textSize="18dp"
            android:background="@drawable/button"
            android:layout_marginTop="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/refuse_privacy"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:id="@+id/refuse_privacy"
            android:background="#00000000"
            android:textColor="#88888888"
            android:text="不同意"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14.5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>
   </androidx.cardview.widget.CardView>
</LinearLayout>