<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShareActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_share"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:scaleType="centerCrop"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/puzzle_btn_tab_return"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/puzzle_font_color"
                android:text="@string/photo_have_saved" />
            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/puzzle_font_color"
                android:layout_marginEnd="16dp"
                android:text="@string/photo_done" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="10dp"
        >
        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="212dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_share_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textColor="@color/puzzle_go_share_fong"
        android:background="@mipmap/puzzle_btn_function_same"
        android:visibility="visible"
        android:text="@string/go_to_share" />

    <LinearLayout
        android:id="@+id/layout_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical" />
</LinearLayout>